feat: hendrix mocks
